# Star-Racer

./: .gitignore  README.md
.github/workflows/: client.yml  server.yml
client/assets/models/: race_car_red.glb.import
client/scenes/: game.tscn  player.tscn
client/scenes/cars/: classic.tscn  future.tscn  sport.tscn
client/scripts/: camera.gd  drift_bar.gd  game.gd  player.gd  start_lights.gd  track_loader.gd  ui.gd
client/shaders/: menu_bg.gdshader
client/tracks/circuit_one/: floor_mat.tres  floor_metal_color.png.import  floor_metal_normal.png.import  floor_metal_roughness.png.import
client/tracks/crete/: level.tscn
scripts/: run-all.ps1  run-all.sh
server/: Cargo.toml
server/src/: lib.rs  lobby.rs  protocol.rs  run.rs  track.rs  tracks_dir.rs
server/src/editor/: camera.rs  gizmo_axes.rs  io.rs  mod.rs  panel.rs  segments.rs  selection.rs  snap.rs  spawn.rs  state.rs  transform_mode.rs
server/tests/: integration.rs
server/tracks/: circuit_one.json  crete.json
