[package]
name = "star-racer-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "server"
test = false
doctest = false

[[bin]]
name = "bots"
test = false
doctest = false

[[bin]]
name = "editor"
test = false
doctest = false
required-features = ["editor"]

[features]
editor = ["dep:bevy", "dep:bevy_egui", "dep:rfd"]

[dependencies]
anyhow = "1.0.102"
cgmath = "0.18.0"
chrono = "0.4.44"
colored = "3.1.1"
crossbeam = {version = "0.8.4", features = ["crossbeam-channel"]}
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
nalgebra = "0.34.2"
rand = "0.10.0"
rapier3d-f64 = "0.32.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version = "1.50.0", features = ["full"]}
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"

bevy = { version = "0.14", optional = true, default-features = false, features = [
  "bevy_winit", "bevy_render", "bevy_pbr", "bevy_core_pipeline",
  "bevy_gizmos", "bevy_asset", "tonemapping_luts", "x11",
] }
bevy_egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Media"] }
